--- a/BetterTF2ItemGenerator/BetterTF2ItemGenerator.csproj
+++ b/BetterTF2ItemGenerator/BetterTF2ItemGenerator.csproj
@@ -2,7 +2,9 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net5.0</TargetFramework>
+    <TargetFramework>net6.0</TargetFramework>
+    <Authors>AnOddDoorKnight</Authors>
+    <Version>1.0.0.0</Version>
   </PropertyGroup>
 
 </Project>
