--- a/TF2ItemGeneratorFinal/TF2ItemGeneratorFinal.csproj
+++ b/TF2ItemGeneratorFinal/TF2ItemGeneratorFinal.csproj
@@ -2,18 +2,10 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net6.0-windows</TargetFramework>
+    <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <EnforceCodeStyleInBuild>True</EnforceCodeStyleInBuild>
   </PropertyGroup>
-
-	<ItemGroup>
-		<Compile Remove="OldCode.cs" />
-	</ItemGroup>
-
-	<ItemGroup>
-		<None Include="OldCode.cs" />
-	</ItemGroup>
 	
 </Project>
